Building infrastructure to simplify control structres. Cleaned a little bit grammar.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "terminal.integrated.fontFamily": "Monaco",
     "makefile.launchConfigurations": [
         {
             "cwd": "/home/manel/repos/manel/msx/megac",
