--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
             "cwd": "/home/manel/repos/manel/msx/megac",
             "binaryPath": "/usr/bin/time",
             "binaryArgs": ["/home/manel/repos/manel/msx/megac/bin/megac", "-l", "-2", "samples/hello_world.mc"],
+        },
+        {
+            "cwd": "/home/manel/repos/manel/msx/megac",
+            "binaryPath": "/home/manel/repos/manel/msx/megac/bin/megac",
+            "binaryArgs": ["-l", "-2", "samples/hello_world.mc"],
         }
     ],
     "files.associations": {
